// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFsRouteTree > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "dynamic": {
          "children": {
            "[id]": {
              "children": {
                "[nested]": {
                  "value": {
                    "page": "/dynamic/[id]/[nested]/page.tsx",
                  },
                },
              },
              "value": {
                "layout": "/dynamic/[id]/layout.tsx",
                "page": "/dynamic/[id]/page.tsx",
              },
            },
            "catchall": {
              "children": {
                "[...any]": {
                  "value": {
                    "page": "/dynamic/catchall/[...any]/page.tsx",
                  },
                },
                "static": {
                  "value": {
                    "page": "/dynamic/catchall/static/page.tsx",
                  },
                },
              },
              "value": {
                "page": "/dynamic/catchall/page.tsx",
              },
            },
            "static": {
              "value": {
                "page": "/dynamic/static/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/dynamic/layout.tsx",
            "page": "/dynamic/page.tsx",
          },
        },
        "other": {
          "value": {
            "page": "/other/page.tsx",
          },
        },
        "test": {
          "children": {
            "other": {
              "value": {
                "page": "/test/other/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/test/layout.tsx",
            "page": "/test/page.tsx",
          },
        },
      },
      "value": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 2`] = `
{
  "__pathname": "/",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 3`] = `
{
  "__pathname": "/other",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "page": "/other/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "other",
        ],
      ],
      "prefix": "/other",
      "type": "layout",
    },
    {
      "node": {
        "page": "/other/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "other",
        ],
      ],
      "prefix": "/other",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 4`] = `
{
  "__pathname": "/not-found",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": undefined,
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/not-found",
      "type": "layout",
    },
    {
      "node": undefined,
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/not-found",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 5`] = `
{
  "__pathname": "/test",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 6`] = `
{
  "__pathname": "/test/other",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test",
      "type": "layout",
    },
    {
      "node": {
        "page": "/test/other/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
        [
          null,
          "other",
        ],
      ],
      "prefix": "/test/other",
      "type": "layout",
    },
    {
      "node": {
        "page": "/test/other/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
        [
          null,
          "other",
        ],
      ],
      "prefix": "/test/other",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 7`] = `
{
  "__pathname": "/test/not-found",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test",
      "type": "layout",
    },
    {
      "node": undefined,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test/not-found",
      "type": "layout",
    },
    {
      "node": undefined,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "prefix": "/test/not-found",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 8`] = `
{
  "__pathname": "/dynamic",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 9`] = `
{
  "__pathname": "/dynamic/static",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/static/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "static",
        ],
      ],
      "prefix": "/dynamic/static",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/static/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "static",
        ],
      ],
      "prefix": "/dynamic/static",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 10`] = `
{
  "__pathname": "/dynamic/abc",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
      ],
      "prefix": "/dynamic/abc",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
      ],
      "prefix": "/dynamic/abc",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 11`] = `
{
  "__pathname": "/dynamic/abc/def",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
      ],
      "prefix": "/dynamic/abc",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/[id]/[nested]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
        [
          "nested",
          "def",
        ],
      ],
      "prefix": "/dynamic/abc/def",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/[id]/[nested]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
        [
          "nested",
          "def",
        ],
      ],
      "prefix": "/dynamic/abc/def",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 12`] = `
{
  "__pathname": "/dynamic/%E2%9C%85",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "✅",
        ],
      ],
      "prefix": "/dynamic/%E2%9C%85",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/[id]/layout.tsx",
        "page": "/dynamic/[id]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "✅",
        ],
      ],
      "prefix": "/dynamic/%E2%9C%85",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 13`] = `
{
  "__pathname": "/dynamic/catchall",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 14`] = `
{
  "__pathname": "/dynamic/catchall/static",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/static/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          null,
          "static",
        ],
      ],
      "prefix": "/dynamic/catchall/static",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/static/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          null,
          "static",
        ],
      ],
      "prefix": "/dynamic/catchall/static",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 15`] = `
{
  "__pathname": "/dynamic/catchall/x",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x",
        ],
      ],
      "prefix": "/dynamic/catchall/x",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x",
        ],
      ],
      "prefix": "/dynamic/catchall/x",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 16`] = `
{
  "__pathname": "/dynamic/catchall/x/y",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y",
        ],
      ],
      "prefix": "/dynamic/catchall/x",
      "type": "layout",
    },
    {
      "node": undefined,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y",
        ],
      ],
      "prefix": "/dynamic/catchall/x/y",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y",
        ],
      ],
      "prefix": "/dynamic/catchall/x/y",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 17`] = `
{
  "__pathname": "/dynamic/catchall/x/y/z",
  "matches": [
    {
      "node": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
      ],
      "prefix": "/",
      "type": "layout",
    },
    {
      "node": {
        "layout": "/dynamic/layout.tsx",
        "page": "/dynamic/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "prefix": "/dynamic",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "prefix": "/dynamic/catchall",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y/z",
        ],
      ],
      "prefix": "/dynamic/catchall/x",
      "type": "layout",
    },
    {
      "node": undefined,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y/z",
        ],
      ],
      "prefix": "/dynamic/catchall/x/y",
      "type": "layout",
    },
    {
      "node": undefined,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y/z",
        ],
      ],
      "prefix": "/dynamic/catchall/x/y/z",
      "type": "layout",
    },
    {
      "node": {
        "page": "/dynamic/catchall/[...any]/page.tsx",
      },
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y/z",
        ],
      ],
      "prefix": "/dynamic/catchall/x/y/z",
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 18`] = `
[
  {
    "dynamic": false,
    "format": [Function],
    "pathname": "/",
    "value": {
      "layout": "/layout.tsx",
      "page": "/page.tsx",
    },
  },
  {
    "dynamic": false,
    "format": [Function],
    "pathname": "/other",
    "value": {
      "page": "/other/page.tsx",
    },
  },
  {
    "dynamic": false,
    "format": [Function],
    "pathname": "/test",
    "value": {
      "layout": "/test/layout.tsx",
      "page": "/test/page.tsx",
    },
  },
  {
    "dynamic": false,
    "format": [Function],
    "pathname": "/test/other",
    "value": {
      "page": "/test/other/page.tsx",
    },
  },
  {
    "dynamic": false,
    "format": [Function],
    "pathname": "/dynamic",
    "value": {
      "layout": "/dynamic/layout.tsx",
      "page": "/dynamic/page.tsx",
    },
  },
  {
    "dynamic": false,
    "format": [Function],
    "pathname": "/dynamic/static",
    "value": {
      "page": "/dynamic/static/page.tsx",
    },
  },
  {
    "dynamic": false,
    "format": [Function],
    "pathname": "/dynamic/catchall",
    "value": {
      "page": "/dynamic/catchall/page.tsx",
    },
  },
  {
    "dynamic": false,
    "format": [Function],
    "pathname": "/dynamic/catchall/static",
    "value": {
      "page": "/dynamic/catchall/static/page.tsx",
    },
  },
  {
    "dynamic": true,
    "format": [Function],
    "pathname": "/dynamic/catchall/[...any]",
    "value": {
      "page": "/dynamic/catchall/[...any]/page.tsx",
    },
  },
  {
    "dynamic": true,
    "format": [Function],
    "pathname": "/dynamic/[id]",
    "value": {
      "layout": "/dynamic/[id]/layout.tsx",
      "page": "/dynamic/[id]/page.tsx",
    },
  },
  {
    "dynamic": true,
    "format": [Function],
    "pathname": "/dynamic/[id]/[nested]",
    "value": {
      "page": "/dynamic/[id]/[nested]/page.tsx",
    },
  },
]
`;
